map.scss
#cannon-map-container {
  display: flex;
  flex-direction: column;
  height: 100vh;
  width: 100%;
  overflow-y: scroll;
  align-items: center;
}

.cannon-floor-img {
  display: flex;
  margin: 16px;
  width: calc(100vw - 228px);
  border: 2px black;
  border-radius: 8px;
  max-width: 2332px;
}

#pdf {
  display: none;
}

button {
  display: none;
}

#bottomButton {
  margin-bottom: 16px;
}

p {
  display: none;
}
@media screen and (min-width: 769px) and (max-width: 1024px) {
  #cannon-map-container {
    display: flex;
    flex-direction: column;
    height: 100vh;
    width: 100%;
    overflow-y: scroll;
    align-items: center;
  }

  .cannon-floor-img {
    width: calc(100vw - 176px);
    max-width: 2332px;
  }
}

@media screen and (min-width: 424px) and (max-width: 768px) {
  .map-buttons {
    display: flex;
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 4px;
    border: none;
    padding: 8px;
  }

  p {
    display: flex;
    font-size: 1.5em;
    color: white;
    margin: 0;
    margin-bottom: 6px;
  }

  .cannon-floor-img {
    width: calc(100vw - 32px);
    max-width: 2332px;
  }

  #cannon-map-container {
    display: flex;
    flex-direction: column;
    height: calc(100vh - 64px);
    width: 100%;
    overflow-y: scroll;
    align-items: center;
  }

  #pdf {
    display: flex;
    flex-wrap: wrap;
    font-size: 1.5em;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
      Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial,
      sans-serif;
    color: white;
    text-decoration: none;
  }
}

@media screen and (max-width: 423px) {
  .map-buttons {
    display: flex;
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 4px;
    border: none;
    padding: 8px;
  }

  p {
    display: flex;
    font-size: 0.8em;
    color: white;
    margin: 0;
    margin-bottom: 3px;
  }

  .cannon-floor-img {
    width: calc(100vw - 32px);
    max-width: 2332px;
  }

  #cannon-map-container {
    display: flex;
    flex-direction: column;
    height: calc(100vh - 64px);
    width: 100%;
    overflow-y: scroll;
    align-items: center;
  }

  #pdf {
    display: flex;
    flex-wrap: wrap;
    font-size: 0.8em;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
      Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial,
      sans-serif;
    color: white;
    text-decoration: none;
  }
}

